# hs-trains

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: ci.yml
config/: config_mixed.yaml
docs/: assets.md  infrastructure.md  interlocking.md  railml.md
python/: RAILML.md  make_railml_rollingstock.py  plot.py
python/hs_trains/: make_gtcl_railml.py  network_map.py  run_100trains.py  tps.py  train_cinematic.py
python/hs_trains/model/: infrastructure.py  rollingstock.py
python/model/: rollingstock.py
python/rusty_trains/: rollingstock_ui.py  utils.py
python/tests/: test_rollingstock.py  test_tps.py
railml/railML-3.3-SR1/: README.md
railml/railML-3.3-SR1/documentation/model/common/: blank.htm  index.htm
railml/railML-3.3-SR1/documentation/model/generic/: blank.htm  index.htm
railml/railML-3.3-SR1/documentation/model/gml/: blank.htm  index.htm
railml/railML-3.3-SR1/documentation/usecases/: README.md
railml/railML-3.3-SR1/source/codelists/: InfrastructureManagers.xml  InfrastructureManagers.xsd  ListBaseTypes.xsd  Registers.xml  Registers.xsd  TrainClearanceGauges.xml  TrainClearanceGauges.xsd  TrainProtectionSystems.xml  TrainProtectionSystems.xsd
railml/railML-3.3-SR1/source/schema/: common3.xsd  dcterms_stub.xsd  generic3.xsd  infrastructure3.xsd  interlocking3.xsd  railml3.xsd  rollingstock3.xsd  rtm4railml3.xsd  timetable3.xsd  visualizations3.xsd
src/: main.rs  model.rs  physics.rs  rollingstock.rs  timing.rs
src/core/: mod.rs  physics.rs
src/io/: mod.rs  railml_infrastructure.rs  railml_timetable.rs
(+2550 files in other folders)
