[package]
name = "hs-trains"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "hs-trains"
path = "src/bin/hs_trains.rs"

[[bin]]
name = "visualize"
path = "src/bin/visualize.rs"

[dependencies]
polars       = { version = "0.53", features = ["parquet", "lazy"] }
serde        = { version = "1",    features = ["derive"] }
serde_yaml_ng = "0.9"
clap         = { version = "4",    features = ["derive"] }
indicatif    = "0.17"
rayon        = "1"
rand         = "0.8"
roxmltree    = "0.20"
rusqlite     = "0.31"
ureq         = "2"
image        = { version = "0.25", features = ["png"] }
gpui         = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }